--- a/PAM/Views/Registrations/Registrations.cshtml
+++ b/PAM/Views/Registrations/Registrations.cshtml
@@ -36,48 +36,52 @@
                             <th scope="col"> Action </th>
                         </tr>
                     </thead>
-               @foreach (var item in Model ?? Enumerable.Empty<Request>())
-               {
-                    <tr>
-                        <td>@Html.DisplayFor(modelItem => item.RequestedById)</td>
-                        <td>@Html.DisplayFor(modelItem => item.SubmittedOn)</td>
-                        <td>
-                            @{
-                                switch (@item.RequestTypeId)
-                                {
-                                    case 1:
-                                        <text> New Hire </text>
-                                        break;
-                                    case 2:
-                                        <text> Transfer </text>
-                                        break;
-                                    case 4:
-                                        <text> Portfolio Assignment </text>
-                                        break;
-                                    case 5:
-                                        <text> Leaving Probation </text>
-                                        break;
-                                    case 11:
-                                        <text> Add Access </text>
-                                        break;
-                                    case 12:
-                                        <text> Remove Access </text>
-                                        break;
-                                    default:
-                                        <text> Invalid Requests </text>
-                                        break;
-                                }
-                            }
-                        </td>
-                        <td>@requester.FirstName</td>
-                        <td>@item.RequestStatus</td>
-                        <td>
-                            <a asp-action="Edit">Edit</a> |
-                            <a asp-action="View">View</a> |
-                            <a asp-action="Delete" asp-route-id="@item.RequestId">Delete</a>
-                        </td>
-                    </tr>
-                }
+                    @foreach (var item in Model ?? Enumerable.Empty<Request>())
+                    {
+                        if (item.Username == requester.Username)
+                        {
+
+                            <tr>
+                                <td>@Html.DisplayFor(modelItem => item.RequestedById)</td>
+                                <td>@Html.DisplayFor(modelItem => item.SubmittedOn)</td>
+                                <td>
+                                    @{
+                                        switch (@item.RequestTypeId)
+                                        {
+                                            case 1:
+                                                <text> New Hire </text>
+                                                break;
+                                            case 2:
+                                                <text> Transfer </text>
+                                                break;
+                                            case 4:
+                                                <text> Portfolio Assignment </text>
+                                                break;
+                                            case 5:
+                                                <text> Leaving Probation </text>
+                                                break;
+                                            case 11:
+                                                <text> Add Access </text>
+                                                break;
+                                            case 12:
+                                                <text> Remove Access </text>
+                                                break;
+                                            default:
+                                                <text> Invalid Requests </text>
+                                                break;
+                                        }
+                                    }
+                                </td>
+                                <td>@requester.FirstName</td>
+                                <td>@item.RequestStatus</td>
+                                <td>
+                                    <a asp-action="Edit">Edit</a> |
+                                    <a asp-action="View">View</a> |
+                                    <a asp-action="Delete" asp-route-id="@item.RequestId">Delete</a>
+                                </td>
+                            </tr>
+                        }
+                    }
                 </table>
             </div>
             <div class="tab-pane fade" id="status">
