--- a/PAM/Views/Request/NewRequest.cshtml
+++ b/PAM/Views/Request/NewRequest.cshtml
@@ -17,6 +17,7 @@
 
     <form asp-controller="RequesterInfo" asp-action="RequestSelf" method="post">
         <div class="text-center">
+            <input asp-for="Username" value="@requester.Username" type="hidden" />
             <input asp-for="RequestedById" value=@requester.RequesterId type="hidden" />
             <input asp-for="RequestedForId" value="@requester.RequesterId" type="hidden" />
             <button type="submit" class="btn btn-info" onclick="progressBar(20)" style="display:inline-block">Self</button>
@@ -25,7 +26,10 @@
     </br>
     <form asp-controller="RequesterInfo" asp-action="RequestOther" method="post">
         <div class="text-center">
+            <input asp-for="Username" value="@requester.Username" type="hidden" />
             <input asp-for="RequestedById" value=@requester.RequesterId type="hidden" />
+            <!--TODO: Fix to Proper RequestedForId-->
+            <input asp-for="RequestedForId" value="@requester.RequesterId" type="hidden" />
             <button type="submit" class="btn btn-info" onclick="progressBar(20)" style="display:inline-block">Another</button>
         </div>
     </form>
