--- a/PAM/Views/Request/RequestInfo.cshtml
+++ b/PAM/Views/Request/RequestInfo.cshtml
@@ -10,9 +10,6 @@
 }
 
 <body>
-    @{
-        Console.WriteLine("LOST??" + Model.RequestedById);
-    }
     <partial name="_ProgressBar.cshtml" />
     <form asp-controller="NewRequest" asp-action="CreateRequest" method="post">
         <div class="shadow-container">
@@ -20,17 +17,22 @@
                 Additional Information of your Request
             </div>
             <h3> Please select all that apply. </h3>
-            <div class="custom-control custom-checkbox">
-                <input asp-for="IsContractor" type="checkbox" class="custom-control-input" id="contractor" checked="" />
-                <label class="custom-control-label" for="customCheck1"> Contractor </label>
-            </div>
-            <div class="custom-control custom-checkbox">
-                <input asp-for="IsHighProfileAccess" type="checkbox" class="custom-control-input" checked="" />
-                <label class="custom-control-label" for="customCheck2"> High Profile</label>
-            </div>
-            <div class="custom-control custom-checkbox">
-                <input asp-for="IsGlobalAccess" type="checkbox" class="custom-control-input" checked="" />
-                <label class="custom-control-label" for="customCheck3"> Global Access </label>
+            <div class="row shadow-container form-group text-center" style="background:#0094ff">
+                <div class="col-4">
+                    <p>Is this Request for a Contractor?</p>
+                    <input asp-for="IsContractor" type="checkbox" class="custom-control-input" style="display:inline-block" id="contractor" />
+                    <label class="custom-control-label" for="contractor"> Contractor </label>
+                </div>
+                <div class="col-4">
+                    <p>Does this request require high profile access?</p>
+                    <input asp-for="IsHighProfileAccess" type="checkbox" class="custom-control-input" style="display:inline-block" id="highProfile" />
+                    <label class="custom-control-label" for="highProfile"> High Profile</label>
+                </div>
+                <div class="col-4">
+                    <p>Does this request require global access?</p>
+                    <input asp-for="IsGlobalAccess" type="checkbox" class="custom-control-input" style="display:inline-block" id="globalAccess" />
+                    <label class="custom-control-label" for="globalAccess"> Global Access </label>
+                </div>
             </div>
             <div class="form-group">
                 <fieldset>
@@ -58,5 +60,11 @@
             </div>
         </div>
         <button type="submit" class="btn btn-info float-right m-3" onclick="progressBar(20)"> Submit </button>
+    </form>
+    <form asp-controller="RequesterInfo" asp-action="RequestOther" method="post">
+        <button type="button" class="btn btn-info float-right m-3" style="display:inline-block">Previous</button>
+    </form>
+    <form asp-controller="Draft">
+        <button type="button" class="btn btn-warning float-left m-3"> Save Draft </button>
     </form>
 </body>
