--- a/PAM/Views/Request/RequestType.cshtml
+++ b/PAM/Views/Request/RequestType.cshtml
@@ -10,11 +10,8 @@
 }
 
 <body>
-    @{
-        Console.WriteLine("LOSTMMMMM??" + Model.RequestedById);
-    }
     <partial name="_ProgressBar.cshtml" />
-    <form asp-controller="RequestInfo" asp-action="RequestInfo">
+    <form asp-controller="RequestInfo" asp-action="RequestInfo" method="get">
         <p>Complete the registration process by following a few simple steps.</p>
         <div class="shadow-container">
             <div class="alert alert-info">
@@ -57,6 +54,12 @@
                 systems access with the <strong>"Transfer"</strong> request.
             </div>
         </div>
-        <button type="submit" class="btn btn-info float-right m-3" onclick="progressBar(20)"> Next </button>
+        <button type="submit" class="btn btn-info float-right m-3" onclick="progressBar(80)"> Next </button>
+    </form>
+    <form asp-controller="RequesterInfo" asp-action="RequestOther" method="post">
+        <button type="button" class="btn btn-info float-right m-3" style="display:inline-block">Previous</button>
+    </form>
+    <form asp-controller="Draft">
+        <button type="button" class="btn btn-warning float-left m-3"> Save Draft </button>
     </form>
 </body>
