--- a/PAM/Views/Request/_ProgressBar.cshtml
+++ b/PAM/Views/Request/_ProgressBar.cshtml
@@ -2,11 +2,10 @@
 <hr>
 <div class="progress" style="margin-bottom: 20px;">
     <div class="progress-bar progress-bar-striped bg-info" id="pBar" role="progressbar"
-         style="width:10%;" aria-valuenow="50"
+         aria-valuenow="50"
          aria-valuemin="0" aria-valuemax="100">
     </div>
 </div>
-
 <script>
     function progressBar(n) {
         /*
@@ -14,9 +13,7 @@
         var progressMeter = n * (100 / (x.length - 1));
         var noZero = Math.round(progressMeter);
         */
-        totalProgress = totalProgress + n;
-
-        document.getElementById("pBar").style.width = 50 + "%";
+        document.getElementById("pBar").style.width = n + "%";
         document.getElementById("pBar").innerHTML = noZero.toString() + "% Complete";
     }
 </script>
