--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -1,4 +1,11 @@
-﻿<!DOCTYPE html>
+﻿@using PAM.Models
+@using PAM.Extensions
+
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+@{
+    var employee = HttpContextAccessor.HttpContext.Session.GetObject<Employee>("Employee");
+}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -41,7 +48,7 @@
                 <div class="card text-white bg-dark">
                     <button type="button" class="close" data-dismiss="card"></button>
                     <div class="card-header">
-                        Welcome, 
+                        Welcome, @employee.FirstName
                     </div>
                     <div class="card-body">
                         <p class="card-text"> This is our newly redesigned Probation Online Registration System. Please navigate through the page with the tabs at the top.</p>
