added logout & fixed name display for requests

--- a/PAM/Views/Registrations/Registrations.cshtml
+++ b/PAM/Views/Registrations/Registrations.cshtml
@@ -185,7 +185,7 @@
                                 }
                             }
                         </td>
-                        <td>@requester.FirstName</td>
+                        <td>@Html.DisplayFor(modelItem => item.Name)</td>
                         <td>@item.RequestStatus</td>
                         <td>
                             <a asp-action="Edit">Edit</a> |
