--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -28,18 +28,20 @@
                     <a class="nav-link" href="/Registrations/Registrations">Registrations</a>
                 </li>
                 <!--
-                <li class="nav-item active">
-                    <a class="nav-link " href="/Home/Profile">Profile<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Home/NewRegistrations">New Registrations</a>
-                </li>
-                -->
+        <li class="nav-item active">
+            <a class="nav-link " href="/Home/Profile">Profile<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Home/NewRegistrations">New Registrations</a>
+        </li>
+        -->
                 <li class="nav-item">
                     <a class="nav-link" href="/Home/Forms">Forms</a>
                 </li>
             </ul>
-            <a href="/Login/Login" type="button" class="btn btn-secondary">Logout</a>
+            <form asp-controller="Account" asp-action="Logout" method="post">
+                <button type="submit" class="btn btn-secondary">Logout</button>
+            </form>
         </div>
     </nav>
     <div class="container-fluid p-4">
