Got rid of uneeded class. Rerouted ReqType to SelectUnit

--- a/PAM/Views/Request/RequestType.cshtml
+++ b/PAM/Views/Request/RequestType.cshtml
@@ -11,7 +11,8 @@
 
 <body>
     <partial name="_ProgressBar.cshtml" />
-    <form asp-controller="RequestInfo" asp-action="RequestInfo" method="get">
+    @*<form asp-controller="RequestInfo" asp-action="RequestInfo" method="get">*@
+    <form asp-controller="SelectUnit" asp-action="Index" method="get">
         <p>Complete the registration process by following a few simple steps.</p>
         <div class="shadow-container">
             <div class="alert alert-info">
