Some code reorganization and cleanup (more to come)
. Set _LoginLayout in view instead of in controller.
. / redirects the user to requests if the user is already logged in (instead of signing the user out).
. Add an error message for login failure.
. Move request management actions to RequestController.
. Move new request actions to NewRequestController.
. Move data access operations to services (e.g. RequestService) instead of using DbContext directly in controller.
. Added an extension method for ClaimsIdentity.
. Use User and UserIdentity directly instead of saving an Employee object in session.
. Set indent_size=2 in HTML.

--- a/PAM/Views/Account/Login.cshtml
+++ b/PAM/Views/Account/Login.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Login";
+    Layout = "_LoginLayout";
 }
 <body>
     <div class="bg-display">
@@ -20,12 +21,10 @@
                 </div>
                 <button type="submit" class="btn btn-info btn-block" value="submit" style="margin-top:40px;"> Login </button>
             </form>
-            <!--
-            <p>
-                <strong>HINT: </strong> The username and password are the same as your network username and password. <br /> <br />
-                Questions related to the probation access manager, please contact ISB Help Desk at <strong>(866) 607-3171</strong> or by email at <strong>sysregdesk@probation.lacounty.gov</strong> <br />
-            </p>
-            -->
+            @if(Model != null)
+            {
+                <p class="text-danger">@Model.Message</p>
+            }
         </div>
     </div>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.0.min.js"></script>
