--- a/PAM/Views/_ViewImports.cshtml
+++ b/PAM/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, PAM
+@using System.Security.Claims
+@using PAM.Models
+@using PAM.Extensions
