added a Portfolio to Bureaus and Unit/Children relationship

--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Units" asp-action="Index">Units</a></li>
                     <li><a asp-area="" asp-controller="Bureaus" asp-action="Index">Bureaus</a></li>
+                    <li><a asp-area="" asp-controller="Systems" asp-action="Index">Systems</a></li>
+                    <li><a asp-area="" asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
+
                 </ul>
             </div>
         </div>
