--- a/PAM/Views/Portfolio/DefaultPortfolio.cshtml
+++ b/PAM/Views/Portfolio/DefaultPortfolio.cshtml
@@ -1,9 +1,10 @@
 ﻿@model IEnumerable<PAM.Models.Unit>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Portfolio";
 }
 
-<h2>Index</h2>
+<h2>Portfolio</h2>
+
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -12,14 +13,15 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.UnitId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Bureau)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UnitType)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Parent)
             </th>
@@ -30,16 +32,18 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model)
+        {
+
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.UnitId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Bureau.Code)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UnitType.Code)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Parent.Name)
@@ -48,11 +52,30 @@
                 @Html.DisplayFor(modelItem => item.DisplayOrder)
             </td>
             <td>
+                <div>
+
+                    @if (item.Children.Count != 0)
+                    {
+                        <a asp-action="DefaultPortfolio" asp-route-id="@item.UnitId">More</a>
+                        @for (var i = 0; i < item.Children.Count; i++)
+                        {
+                            <b>i</b>
+                        }
+                    }
+                    else
+                    {
+                        <a asp-action="Add" asp-route-id="@item.UnitId">Empty</a>
+                    }
+                </div>
+
+            </td>
+            <td>
                 <a asp-action="Edit" asp-route-id="@item.UnitId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.UnitId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.UnitId">Delete</a>
             </td>
         </tr>
-}
+
+        }
     </tbody>
 </table>
