non functional progress bar + prev button for some forms

--- a/PAM/Views/Registrations/Registrations.cshtml
+++ b/PAM/Views/Registrations/Registrations.cshtml
@@ -74,7 +74,7 @@
                                         }
                                     }
                                 </td>
-                                <td>@requester.FirstName</td>
+                                <td>@requester.Name</td>
                                 <td>@item.RequestStatus</td>
                                 <td>
                                     <a asp-action="Edit">Edit</a> |
