--- a/PAM/wwwroot/css/styles.css
+++ b/PAM/wwwroot/css/styles.css
@@ -109,21 +109,79 @@
     font-size: 18px;
 }
 
-.step {
-    display: none;
-}
-
-.progress{
-    background-color:#ababab;
-    color:#fff;
-    border-radius: 3px;
-    font-size: 16px;
-    height: 25px;
-}
-
 input.invalid {
     background-color: #ffdddd;
 }
+
+/*----------------------------------------------------------
+    [ Progress Bar CSS ]
+*/
+
+.progressbar-container{
+    width: 800px;
+    margin: 25px auto;
+}
+
+.progressbar {
+    display:flex;
+    margin: 0;
+    padding: 0;
+    counter-reset: step;
+}
+
+    .progressbar li {
+        list-style-type: none;
+        width: 25%;
+        float: left;
+        font-size: 12px;
+        position: relative;
+        text-align: center;
+        text-transform: uppercase;
+        color: #000;
+    }
+
+    
+        .progressbar li:before {
+            width: 30px;
+            height: 30px;
+            content: counter(step);
+            counter-increment: step;
+            line-height: 30px;
+            border: 2px solid #7d7d7d;
+            display: block;
+            text-align: center;
+            margin: 0 auto 10px auto;
+            border-radius: 50%;
+            background-color: white;
+        }
+
+        .progressbar li:after {
+            width: 100%;
+            height: 2px;
+            content: '';
+            position: absolute;
+            background-color: #7d7d7d;
+            top: 15px;
+            left: -41%;
+            z-index: -1;
+        }
+
+        .progressbar li:first-child:after {
+            content: none;
+        }
+
+        .progressbar li.active {
+            color: green;
+        }
+
+            .progressbar li.active:before {
+                border-color: #55b776;
+            }
+
+            .progressbar li.active + li:after {
+                background-color: #55b776;
+            }
+
 /*----------------------------------------------------------
     [ Loading Modal ]
 */
