--- a/PAM/Views/Request/SelectUnit.cshtml
+++ b/PAM/Views/Request/SelectUnit.cshtml
@@ -4,5 +4,20 @@
     <partial name="_ProgressBar.cshtml" />
     <form asp-controller="SelectUnit" asp-action="">
         <h2>Unit Select Test</h2>
+        <div id="tree"></div>
+        <button type="submit" class="btn btn-info float-right m-3" onclick="progressBar(80)"> Next </button>
     </form>
+    <form asp-controller="RequesterInfo" asp-action="RequestOther" method="post">
+        <button type="button" class="btn btn-info float-right m-3" style="display:inline-block">Previous</button>
+    </form>
+    <form asp-controller="Draft">
+        <button type="button" class="btn btn-warning float-left m-3"> Save Draft </button>
+    </form>
+    <script src="jquery.js"></script>
+    <script src="bootstrap-treeview.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-treeview/1.2.0/bootstrap-treeview.min.css"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-treeview/1.2.0/bootstrap-treeview.min.js"></script>
+    <script type="text/javascript">
+        $('#tree').treeview({ data: @ViewBag.UnitList});
+    </script>
 </body>
