--- a/PAM/Views/NewRequest/RequestType.cshtml
+++ b/PAM/Views/NewRequest/RequestType.cshtml
@@ -11,7 +11,7 @@
 
 <body>
     <partial name="../Shared/_ProgressBar.cshtml" />
-    <form asp-controller="RequestInfo" asp-action="RequestInfo" method="get">
+    <form asp-controller="NewRequest" asp-action="RequestInfo" method="get">
         <div class="shadow-container">
             <div class="alert alert-info">
                 Please Select The Type of Request
