--- a/PAM/Views/NewRequest/OtherInfo.cshtml
+++ b/PAM/Views/NewRequest/OtherInfo.cshtml
@@ -11,7 +11,7 @@
 
 <body>
     <partial name="../Shared/_ProgressBar.cshtml" />
-    <form asp-controller="RequesterInfo" asp-action="SelfInfo" id="requestForInfo" method="post">
+    <form asp-controller="NewRequest" asp-action="SelfInfo" id="requestForInfo" method="post">
         <input asp-for="Username" value="@requester.Username" type="hidden" />
         <input asp-for="Name" value="@requester.Username" type="hidden" />
         <div class="shadow-container">
