--- a/PAM/Views/Request/Self.cshtml
+++ b/PAM/Views/Request/Self.cshtml
@@ -17,7 +17,7 @@
   <div id="myTabContent" class="tab-content">
     <div id="all" class="tab-pane fade show active">
       <table class="table table-hover table-responsive-xl">
-        <thead class="thead-dark">
+        <thead class="thead-light">
           <tr>
             <th scope="col">Id</th>
             <th scope="col">Type</th>
