--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -18,19 +18,17 @@
 
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/Registrations/Registrations">Registrations</a>
-        </li>
-        <!--
         <li class="nav-item active">
-            <a class="nav-link " href="/Home/Profile">Profile<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/Request/Self">Requests</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Home/NewRegistrations">New Registrations</a>
+            <a class="nav-link " href="">Users</a>
         </li>
-        -->
         <li class="nav-item">
-          <a class="nav-link" href="/Home/Forms">Forms</a>
+            <a class="nav-link" href="">Reports</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Organization</a>
         </li>
       </ul>
       <form asp-controller="Account" asp-action="Logout" method="post">
@@ -41,6 +39,29 @@
   <div class="container-fluid p-4">
     <div class="row">
       <div class="col-xl-2 mb-2">
+        <nav class="navbar navbar-dark bg-dark">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="">Your Request</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="">Review Requests</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="">Process Requests</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="">All Requests</a>
+            </li>
+          </ul>
+        </nav>
+      <!--
         <div class="card text-white bg-dark">
           <button type="button" class="close" data-dismiss="card"></button>
           <div class="card-header">
@@ -50,6 +71,7 @@
             <p class="card-text"> This is our newly redesigned Probation Online Registration System. Please navigate through the page with the tabs at the top.</p>
           </div>
         </div>
+      -->
       </div>
       <div class="col-xl-10">
         <div class="form-container shadow-lg">
@@ -58,9 +80,10 @@
       </div>
     </div>
   </div>
-  <p style="text-align:center; color:white;">&copy; Copyright 2018-2019. Cal State Los Angeles Senior Design Team #14. </p>
+  <p style="text-align:center; color:white;">&copy; Copyright 2018-2019. Los Angeles County. </p>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="~/js/myscripts.js"></script>
 </body>
 </html>
