--- a/PAM/Views/Request/SelectUnit.cshtml
+++ b/PAM/Views/Request/SelectUnit.cshtml
@@ -13,11 +13,11 @@
     <form asp-controller="Draft">
         <button type="button" class="btn btn-warning float-left m-3"> Save Draft </button>
     </form>
-    <script src="jquery.js"></script>
-    <script src="bootstrap-treeview.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-treeview/1.2.0/bootstrap-treeview.min.css"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-treeview/1.2.0/bootstrap-treeview.min.js"></script>
     <script type="text/javascript">
         $('#tree').treeview({ data: @ViewBag.UnitList});
+        console.log(@ViewBag.UnitList);
     </script>
 </body>
