--- a/PAM/Views/Portfolio/DefaultPortfolio.cshtml
+++ b/PAM/Views/Portfolio/DefaultPortfolio.cshtml
@@ -3,11 +3,11 @@
     ViewData["Title"] = "Portfolio";
 }
 
-<h2>Portfolio</h2>
+<h2>@Html.DisplayFor / Unit / Unit Portfolio</h2>
 
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreateUnit">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -57,22 +57,19 @@
                     @if (item.Children.Count != 0)
                     {
                         <a asp-action="DefaultPortfolio" asp-route-id="@item.UnitId">More</a>
-                        @for (var i = 0; i < item.Children.Count; i++)
-                        {
-                            <b>i</b>
-                        }
+                        
                     }
                     else
                     {
-                        <a asp-action="Add" asp-route-id="@item.UnitId">Empty</a>
+                        <a asp-action="DefaultPortfolio" asp-route-id="@item.UnitId">Empty</a>
                     }
                 </div>
 
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.UnitId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.UnitId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.UnitId">Delete</a>
+                <a asp-action="EditUnit" asp-route-id="@item.UnitId">Edit</a> |
+                <a asp-action="DetailsUnit" asp-route-id="@item.UnitId">Details</a> |
+                <a asp-action="DeleteUnit" asp-route-id="@item.UnitId">Delete</a>
             </td>
         </tr>
 
