--- a/PAM/Views/Portfolio/DeleteUnit.cshtml
+++ b/PAM/Views/Portfolio/DeleteUnit.cshtml
@@ -43,7 +43,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="DeleteConfirmedUnit">
         <input type="hidden" asp-for="UnitId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="Index">Back to List</a>
