added working w3 autocomplete

--- a/PAM/Views/Request/Self.cshtml
+++ b/PAM/Views/Request/Self.cshtml
@@ -5,7 +5,7 @@
 <body>
   <p style="font-size: 40px;">
     Registration Requests
-    <a asp-controller="NewRequest" asp-action="CreateRequester" method="get" class="btn btn-info float-right">+ New Request</a>
+    <a asp-controller="NewRequest" asp-action="Supervisors" method="get" class="btn btn-info float-right">+ New Request</a>
   </p>
 
   <ul class="nav nav-tabs">
