--- a/PAM/Views/Shared/_ProgressBar.cshtml
+++ b/PAM/Views/Shared/_ProgressBar.cshtml
@@ -1,25 +1,24 @@
 ﻿<p style="font-size: 40px;" class="text-center">New Registration</p>
 <hr>
 <div class="progressbar-container">
-    <ul class="progressbar">
-        <li class="step active">Self or For</li>
-        <li class="step">Requester(s) Information</li>
-        <li class="step">Request Type</li>
-        <li class="step">Unit Selection</li>
-        <li class="step">System Selection</li>
-        <li class="step">Request Information</li>
-        <li class="step">Supervisors</li>
-        <li class="step">Review</li>
-    </ul>
+  <ul class="progressbar">
+    <a asp-action="CreateRequester"><li class="step active">Self or For</li></a>
+    <a asp-action="OtherInfo"><li class="step">Requester(s) Information</li></a>
+    <a asp-action="RequestType"><li class="step">Request Type</li></a>
+    <a asp-action=""><li class="step">Unit Selection</li></a>
+    <a asp-action=""><li class="step">System Selection</li></a>
+    <a asp-action="RequestInfo"><li class="step">Request Information</li></a>
+    <a asp-action="Supervisors"><li class="step">Supervisors</li></a>
+    <a asp-action="Review"><li class="step">Review</li></a>
+  </ul>
 </div>
 <hr>
 
 <script>
-    function stepIndicate(n) {
-        var i, x = document.getElementByClassName("step");
-        for (i = 0; i < x.length; i++) {
-            x[i].className = x[i].className.replace(" active", "");
-        }
-        x[n].className += " active";
+  function stepIndicate(n) {
+    let x = document.getElementsByClassName("step");
+    for (let i = 0; i < x.length; i++) {
+      x[i].className = x[i].className.replace(" active", "");
     }
+  }
 </script>
