--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -32,15 +32,16 @@
           <a class="nav-link" href="">Organization</a>
         </li>
       </ul>
+      <p style="position:absolute; right:0; top:0; color:white; font-size:30px;">Welcome, @identity.GetClaim(ClaimTypes.GivenName)</p>
       <form asp-controller="Account" asp-action="Logout" method="post">
-        <button type="submit" class="btn btn-secondary">Logout</button>
+        <button type="submit" class="btn btn-secondary" style="position:absolute; right:0; bottom:0;">Logout</button>
       </form>
     </div>
   </nav>
   <div class="container-fluid p-4">
     <div class="row">
       <div class="col-xl-2 mb-2">
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-dark" style="border-radius:7px;">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="">Your Request</a>
@@ -82,10 +83,12 @@
     </div>
   </div>
   <p style="text-align:center; color:white;">&copy; Copyright 2018-2019. Los Angeles County. </p>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://gitcdn.link/repo/xcash/bootstrap-autocomplete/master/dist/latest/bootstrap-autocomplete.min.js"></script>
   <script src="~/js/w3autocomplete.js"></script>
+  <script src="~/js/scripts.js"></script>
   </body>
 </html>
