--- a/PAM/Views/Shared/_ProgressBar.cshtml
+++ b/PAM/Views/Shared/_ProgressBar.cshtml
@@ -3,7 +3,7 @@
 <div class="progressbar-container">
   <ul class="progressbar">
     <a asp-action="CreateRequester"><li class="step active">Self or For</li></a>
-    <a asp-action="OtherInfo"><li class="step">Requester(s) Information</li></a>
+    <a asp-action="SelfInfo"><li class="step">Requester(s) Information</li></a>
     <a asp-action="RequestType"><li class="step">Request Type</li></a>
     <a asp-action=""><li class="step">Unit Selection</li></a>
     <a asp-action=""><li class="step">System Selection</li></a>
@@ -20,5 +20,6 @@
     for (let i = 0; i < x.length; i++) {
       x[i].className = x[i].className.replace(" active", "");
     }
+    x[n].className += " active";
   }
 </script>
