--- a/PAM/Views/NewRequest/Supervisors.cshtml
+++ b/PAM/Views/NewRequest/Supervisors.cshtml
@@ -6,9 +6,10 @@
   <partial name="../Shared/_ProgressBar.cshtml" />
   <form asp-controller="NewRequest" asp-action="Review" method="get">
     <div class="alert alert-info">
-      Select the supervisor to review this request.
+      Select the supervisor(s) to review this request.
     </div>
     <div class="autocomplete" style="width:400px;">
+      <label>Supervisors</label>
       <input id="adEmployees" type="text" placeholder="Supervisor" autocomplete="off">
     </div>
     <input type="submit" class="btn btn-primary">
