--- a/PAM/Views/Request/Self.cshtml
+++ b/PAM/Views/Request/Self.cshtml
@@ -7,17 +7,81 @@
     Registration Requests
     <a asp-controller="NewRequest" asp-action="CreateRequester" method="get" class="btn btn-info float-right">+ New Request</a>
   </p>
-
+  <hr />
   <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" data-toggle="tab" href="#all">Requests</a>
+      <a class="nav-link active" data-toggle="tab" href="#review">Under Review</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#completed">Completed</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#drafts">Drafts</a>
     </li>
   </ul>
 
   <div id="myTabContent" class="tab-content">
-    <div id="all" class="tab-pane fade show active">
+    <div id="review" class="tab-pane fade show active">
       <table class="table table-hover table-responsive-xl">
-        <thead class="thead-light">
+        <thead class="table-info">
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Type</th>
+            <th scope="col">Submitted On</th>
+            <th scope="col">Status</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          @foreach (var request in (List<Request>)ViewData["requests"])
+          {
+            <tr>
+              <td>@request.RequestId</td>
+              <td>@request.RequestType.DisplayCode</td>
+              <td>@request.SubmittedOn</td>
+              <td>@request.RequestStatus</td>
+              <td>
+                <a asp-action="View">View</a> |
+                <a asp-action="Edit">Edit</a> |
+                <a asp-action="Delete" asp-route-id="@request.RequestId">Delete</a>
+              </td>
+            </tr>
+          }
+        </tbody>
+      </table>
+    </div>
+    <div id="completed" class="tab-pane fade">
+      <table class="table table-hover table-responsive-xl">
+        <thead class="table-info">
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Type</th>
+            <th scope="col">Submitted On</th>
+            <th scope="col">Status</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          @foreach (var request in (List<Request>)ViewData["requests"])
+          {
+            <tr>
+              <td>@request.RequestId</td>
+              <td>@request.RequestType.DisplayCode</td>
+              <td>@request.SubmittedOn</td>
+              <td>@request.RequestStatus</td>
+              <td>
+                <a asp-action="View">View</a> |
+                <a asp-action="Edit">Edit</a> |
+                <a asp-action="Delete" asp-route-id="@request.RequestId">Delete</a>
+              </td>
+            </tr>
+          }
+        </tbody>
+      </table>
+    </div>
+    <div id="drafts" class="tab-pane fade">
+      <table class="table table-hover table-responsive-xl">
+        <thead class="table-info">
           <tr>
             <th scope="col">Id</th>
             <th scope="col">Type</th>
