--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -32,15 +32,14 @@
           <a class="nav-link" href="">Organization</a>
         </li>
       </ul>
-      <p style="position:absolute; right:0; top:0; color:white; font-size:30px;">Welcome, @identity.GetClaim(ClaimTypes.GivenName)</p>
-      <form asp-controller="Account" asp-action="Logout" method="post">
-        <button type="submit" class="btn btn-secondary" style="position:absolute; right:0; bottom:0;">Logout</button>
-      </form>
     </div>
   </nav>
   <div class="container-fluid p-4">
     <div class="row">
       <div class="col-xl-2 mb-2">
+        <!--
+        <p style="background-color: white; border-radius: 7px; color:black;">Welcome, @identity.GetClaim(ClaimTypes.GivenName)</p>
+        -->
         <nav class="navbar navbar-dark bg-dark" style="border-radius:7px;">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -48,32 +47,24 @@
             </li>
           </ul>
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="">Review Requests</a>
             </li>
           </ul>
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="">Process Requests</a>
             </li>
           </ul>
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="">All Requests</a>
             </li>
           </ul>
         </nav>
-      <!--
-        <div class="card text-white bg-dark">
-          <button type="button" class="close" data-dismiss="card"></button>
-          <div class="card-header">
-            Welcome, @identity.GetClaim(ClaimTypes.GivenName)
-          </div>
-          <div class="card-body">
-            <p class="card-text"> This is our newly redesigned Probation Online Registration System. Please navigate through the page with the tabs at the top.</p>
-          </div>
-        </div>
-      -->
+        <form asp-controller="Account" asp-action="Logout" method="post">
+          <button type="submit" class="btn btn-secondary" style="border-radius: 7px; margin-top: 20px; width: 100%;">Logout</button>
+        </form>
       </div>
       <div class="col-xl-10">
         <div class="form-container shadow-lg">
