--- a/PAM/wwwroot/css/styles.css
+++ b/PAM/wwwroot/css/styles.css
@@ -6,6 +6,14 @@
     background: linear-gradient(to top, #3D7EAA 0%, #E4E5E6 100%);
     background: -webkit-linear-gradient(to bottom, #00416A 0%, #E4E5E6 100%);
 }
+
+label {
+    font-style:italic;
+}
+
+.navbar a{
+  font-size: 14px;
+}
 /*----------------------------------------------------------
     [ Background for Login ]
 */
@@ -73,14 +81,6 @@
     margin: 25px;
     display: flex;
     flex-wrap: wrap;
-}
-
-.card {
-    border-radius: 7px;
-}
-
-.card-header {
-    font-size: 20px;
 }
 
 .form-container {
