--- a/PAM/wwwroot/css/w3autocomplete.css
+++ b/PAM/wwwroot/css/w3autocomplete.css
@@ -4,17 +4,13 @@
   display: inline-block;
 }
 
-input {
+#adEmployees{
   border: 1px solid transparent;
   background-color: #f1f1f1;
   padding: 10px;
   font-size: 16px;
+  width: 100%;
 }
-
-  input[type=text] {
-    background-color: #f1f1f1;
-    width: 100%;
-  }
 
 .autocomplete-items {
   position: absolute;
