--- a/PAM/Views/NewRequest/RequestInfo.cshtml
+++ b/PAM/Views/NewRequest/RequestInfo.cshtml
@@ -14,10 +14,10 @@
   <form asp-controller="NewRequest" asp-action="Supervisors" method="get">
     <div class="shadow-container">
       <div class="alert alert-info">
-        Additional Information of your Request
+        Step 6 - Additional Request Information
       </div>
       <h3> Please select all that apply. </h3>
-      <div class="row shadow-container form-group text-center" style="background:#0094ff">
+      <div class="row shadow-container form-group text-center" style="margin-left: 3px;">
         <div class="col-4">
           <p>Is this Request for a Contractor?</p>
           <input asp-for="IsContractor" type="checkbox" class="custom-control-input" style="display:inline-block" id="contractor" />
