--- a/PAM/Views/NewRequest/RequestType.cshtml
+++ b/PAM/Views/NewRequest/RequestType.cshtml
@@ -14,7 +14,7 @@
   <form asp-controller="NewRequest" asp-action="RequestInfo" method="get">
     <div class="shadow-container">
       <div class="alert alert-info">
-        Please Select The Type of Request
+        Step 3 = Select The Type of Request
       </div>
       <div class="form-group">
         <div class="custom-control custom-radio">
