--- a/PAM/Views/NewRequest/Review.cshtml
+++ b/PAM/Views/NewRequest/Review.cshtml
@@ -29,7 +29,7 @@
       <div class="alert alert-success">
         Step 7 - Supervisor's Review
       </div>
-    <button type="submit" class="btn btn-primary">Confirm Submit</button>" 
+    <button type="submit" class="btn btn-primary">Confirm Submit</button> 
     <!-- TODO -->
   </form>
 </body>
