--- a/PAM/Views/NewRequest/Supervisors.cshtml
+++ b/PAM/Views/NewRequest/Supervisors.cshtml
@@ -6,7 +6,7 @@
   <partial name="../Shared/_ProgressBar.cshtml" />
   <form asp-controller="NewRequest" asp-action="Review" method="get">
     <div class="alert alert-info">
-      Select the supervisor(s) to review this request.
+      Step 7 - Select the supervisor(s) to review this request.
     </div>
     <div class="autocomplete" style="width:400px;">
       <label>Supervisors</label>
