--- a/PAM/Views/Shared/_ProgressBar.cshtml
+++ b/PAM/Views/Shared/_ProgressBar.cshtml
@@ -2,7 +2,7 @@
 <hr>
 <div class="progressbar-container">
   <ul class="progressbar">
-    <a asp-action="CreateRequester"><li class="step active">Self or For</li></a>
+    <a asp-action="CreateRequester"><li class="step">Self or For</li></a>
     <a asp-action="SelfInfo"><li class="step">Requester(s) Information</li></a>
     <a asp-action="RequestType"><li class="step">Request Type</li></a>
     <a asp-action=""><li class="step">Unit Selection</li></a>
